# LLM-document-intelligence-pipeline

./: .env.example  .gitattributes  .gitignore  DECISIONS.md  LICENSE  PROJECT_STATUS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/annotations/: README.md  public_gold_cases_v0.1.jsonl  public_gold_facts_v0.1.jsonl  public_gold_v0.1_manifest.json
data/manifests/: README.md  (+4 more)
docs/: architecture.md  corpus_freeze.md  corpus_strategy.md  end_to_end_example.md  evaluation_plan.md  extraction_schema.md  licence_policy.md  product_definition.md  project_charter.md  public_gold_annotation_guide.md  public_gold_challenge_review.md  public_gold_freeze.md  public_gold_full_review.md  public_gold_owner_decision_log.md  public_gold_owner_review.md  source_audit_protocol.md  stage_1_completion_report.md  stage_1b_audit_utility_validation.md  stage_1b_expanded_corpus_audit_report.md  stage_1b_pilot_audit_report.md  stage_2_acceptance_report.md  stage_2_ingestion_design.md  stage_2a_development_validation.md  stage_2b_held_out_validation.md  stage_3_extraction_design.md  stage_3a_annotation_report.md  stage_3a_completion_report.md  synthetic_challenge_set_spec.md  synthetic_data_policy.md
scripts/: generate_synthetic_corpus.py
tests/: test_batch_ingestion.py  test_eml_parser.py  test_extraction_models.py  test_ingestion_dispatcher.py  test_ingestion_models.py  test_pdf_audit.py  test_pdf_parser.py  test_pptx_parser.py  test_predicate_vocabulary.py  test_public_gold_annotations.py  test_public_gold_freeze.py  test_smoke.py  test_synthetic_corpus.py
(+28 files in other folders)
