[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-document-intelligence-pipeline"
version = "0.1.0"
description = "An evaluated portfolio prototype for traceable document intelligence extraction."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pypdf>=6,<7",
]

[project.scripts]
audit-pdfs = "document_intelligence.audit.pdf_audit:main"

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["document_intelligence*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
